src/test/ui/specialization/issue-39448.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-39448.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0275]: overflow evaluating the requirement `T: FromA<U>`
  --> $DIR/issue-39448.rs:45:13
   |
LL |     x.foo(y.to()).to()
   |             ^^
   |
note: required because of the requirements on the impl of `FromA<U>` for `T`
  --> $DIR/issue-39448.rs:24:29
   |
LL | impl<T: A, U: A + FromA<T>> FromA<T> for U {
   |                             ^^^^^^^^     ^
note: required because of the requirements on the impl of `ToA<T>` for `U`
  --> $DIR/issue-39448.rs:34:12
   |
LL | impl<T, U> ToA<U> for T
   |            ^^^^^^     ^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
